=======================
CHANGELOG
=======================

UP
----

    - Split tests
    - Fix type 'list'and pattern replacement code

1.50
------

    - workaround to install when there are conflicts from versions pinned in setup.py and different ones in buildout


1.47
------

    - Added the dependent-scripts option to stick to zc.recipe.egg

1.45
----

	- better handle of entrypoints/console script conflict options (cs. prefix, see code)
	- add per script options (initialization, argurments, python)

1.44
-----

	- when both EntryPoint and Script have the same name, it's the EP which wins.


1.41
-----

    - fix a special case where all scripts were filtered out

1.39
--------

    -   do not preerve PYTHONPATH on env.file generation

1.37
-------

    - Decorator helper


1.36
-----

    - fix develop link

1.35
---------

    - splitted out from minitage.recipe
